Copyright (C) 2017 Alpha Griffin
@%@~LICENSE~@%@

saw_042017_1 - First commit for fauxpython.
