@@ -1,0 +1,10 @@
+dummyscript\.fauxpython package
+===============================
+
+Module contents
+---------------
+
+.. automodule:: dummyscript.fauxpython
+    :members:
+    :undoc-members:
+    :show-inheritance:
