@@ -1,0 +1,17 @@
+dummyscript package
+===================
+
+Subpackages
+-----------
+
+.. toctree::
+
+    dummyscript.fauxpython
+
+Module contents
+---------------
+
+.. automodule:: dummyscript
+    :members:
+    :undoc-members:
+    :show-inheritance:
