@@ -1,0 +1,7 @@
+dummyscript
+===========
+
+.. toctree::
+   :maxdepth: 4
+
+   dummyscript
