@@ -1,0 +1,6 @@
+<!--
+    Copyright (C) 2017 Alpha Griffin
+    @%@~LICENSE~@%@
+-->
+<html><head><meta http-equiv="refresh" content="0;URL=html/README.html"></head></html>
+
