@@ -1,5 +1,7 @@
 Copyright (C) 2017 Alpha Griffin
 @%@~LICENSE~@%@
 
+saw_052017_1 - Incorporate work from pyproject... the Sphinx documentation setup, etc.
+
 saw_042017_1 - First commit for fauxpython.
 
